[tool.poetry]
authors = ["Ben Soyka <bensoyka@icloud.com>"]
description = ""
name = "roboben"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.9.1"
arrow = "^1.3.0"
beanie = "^1.24.0"
deepdiff = "^6.7.1"
discord-timestamps = "^1.0.2"
disnake = "^2.9.1"
dnspython = "^2.4.2"
fuzzywuzzy = "^0.18.0"
loguru = "^0.7.2"
motor = "^3.3.2"
pydantic = "^2.5.3"
python = "^3.12"
python-Levenshtein = "^0.23.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pylint = "^2.12.2"
taskipy = "^1.9.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
known_first_party = ["bot"]
line_length = 120
profile = "black"
py_version = 310

[tool.black]
line_length = 120

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
pre-commit = "pre-commit install"
start = "python -m bot"
